[package]
name = "grpc-tutorial"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grpc_server"
path = "src/grpc_server.rs"

[[bin]]
name = "grpc_client"
path = "src/grpc_client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"